twitter setup final

--- a/responsive/twitter-setup/index.html
+++ b/responsive/twitter-setup/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,800;1,400&family=Poppins:wght@400;500;600;900&display=swap"
         rel="stylesheet">
@@ -16,16 +15,25 @@
 
 <body>
     <div class="container">
-        <h1 class="title">Facebook Landing Page </h1>\
+        <h1 class="title">Twitter Landing Page </h1>
         <section>
             <h2>Large Screens</h2>
-            <img src="./SVG/large-screens.svg" >
+            <img src="./SVG/desktop.svg" style="display: block; margin: auto;">
         </section>
         <section>
-            <h2>Small Screens</h2>
-            <p>Media query for screens smaller than 900px</p>
-            <img src="./SVG/small-screens.svg" style="display: block; margin: auto; width:600px">
+            <h2>Viewport height &lt; 640px</h2>
+            <img src="./SVG/height.svg" style="display: block; margin: auto; ">
         </section>
+        
+        <section>
+            <h2>Viewport width &lt; 850px</h2>
+            <img src="./SVG/tablet.svg" style="display: block; margin: auto; width:600px">
+        </section>
+        <section>
+            <h2>Viewport width &lt; 430px</h2>
+            <img src="./SVG/mobile.svg" style="display: block; margin: auto; width:600px">
+        </section>
+
     </div>
 
 
