--- a/responsive/instagram/index.html
+++ b/responsive/instagram/index.html
@@ -7,23 +7,32 @@
     <link href="./style/style.css" rel="stylesheet" type="text/css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
-    <title>Facebook</title>
+    <title>Instagram</title>
 </head>
 <body>
     <div class="container">
-        <div id="left">
-            <img src="./SVG/logo.svg" >
-            <h1>Connect with friends and the world around you on Facebook.</h1>
+        <div id="mockup">
+            
         </div>
-        <div id="right">
-            <form >
-                <input type="text" placeholder="Email or Phone Number">
+
+        <div id="form">
+            <img src="./img/logo.png">
+
+            <form>
+                <input type="text" placeholder="Phone number, username or email">
                 <input type="password" placeholder="Password">
                 <input type="submit" value="Login">
-                <a href="#">Forgot Password?</a>
-                <button>Create New Account</button>
+
+                <div class="hr">
+                    <div class="line"></div>
+                    <h4>OR</h4>
+                    <div class="line"></div>
+                </div>
+
+                <div id="fb">
+
+                </div>
             </form>
-            <h5><a href="#">Create a Page</a> for a celebrity, band or business.</h5>
         </div>
     </div>
 </body>
