--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
                 <li><a href="./responsive/facebook/">Project-4: Facebook landing page</a></li>
                 <li><a href="./responsive/twitter-setup/">Project-5: Set up</a></li>
                 <li><a href="./responsive/twitter/">Project-5: Twitter landing page</a></li>
+                <li><a href="">Project-6: Set up</a></li>
+                <li><a href="./responsive/instagram/">Project-5: Instagram landing page</a></li>
                 
             </ul>
         </section>
