form semi ready

--- a/responsive/instagram/index.html
+++ b/responsive/instagram/index.html
@@ -16,9 +16,10 @@
         </div>
 
         <div id="form">
-            <img src="./img/logo.png">
 
-            <form>
+            <form id="login">
+                <img id='logo' src="./img/logo.png">
+
                 <input type="text" placeholder="Phone number, username or email">
                 <input type="password" placeholder="Password">
                 <input type="submit" value="Login">
@@ -29,11 +30,23 @@
                     <div class="line"></div>
                 </div>
 
-                <div id="fb">
 
+
+                <div id="fb">
+                    <img src="./img/facebook.svg" >
+                    <h4>Login with Facebook</h4>
                 </div>
+
+                <h6><a href="#">Forgot password?</a></h6>
             </form>
+
+
+            <div id="signup">
+                <h5>Don't have an account? <a href="#">Sign up</a></h5>
+            </div>
         </div>
+
+        
     </div>
 </body>
 </html>
