--- a/responsive/instagram/index.html
+++ b/responsive/instagram/index.html
@@ -12,7 +12,10 @@
 <body>
     <div class="container">
         <div id="mockup">
-            
+            <img style="--delay:0s" src="./img/img1.jpg">
+            <img style="--delay:5s" src="./img/img2.jpg">
+            <img style="--delay:10s" src="./img/img3.jpg">
+            <img style="--delay:15s" src="./img/img4.jpg">
         </div>
 
         <div id="form">
@@ -22,7 +25,7 @@
 
                 <input type="text" placeholder="Phone number, username or email">
                 <input type="password" placeholder="Password">
-                <input type="submit" value="Login">
+                <input type="submit" value="Log In">
 
                 <div class="hr">
                     <div class="line"></div>
