sticky reponsive nav

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
         <section>
             <ul>
                 <li><a href="./ui-components/sticky-nav/">Sticky Navigation Bar</a></li>
-                <li>Responsive Navigation Bar</li>
-                <li>Tooltips and Popup message</li>
+                <li><a href="./system-design/sticky-reponsive-nav/">Responsive Sticky Nav</a></li>
+                <!-- <li>Tooltips and Popup message</li>
                 <li>Modal</li>
                 <li>Mega menu </li>
                 <li>accordion menu</li>
@@ -138,7 +138,7 @@
                 <li>Lazy Loading</li>
                 <li> Placeholders</li>
                 <li>Parallax</li>
-                <li>Drag and Drop</li>
+                <li>Drag and Drop</li> -->
             </ul>
         </section>
         <h1 class="title">HTML Graphics</h1>
