--- a/system-design/sticky-reponsive-nav/index.html
+++ b/system-design/sticky-reponsive-nav/index.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
 
-    <aside class="collapse">
+    <aside >
         <nav>
             <ul>
                 <li>
@@ -45,7 +45,7 @@
                     <h4>email</h4>
                 </li>
                 <li>
-                    <img src="./img/profile-icon.svg">
+                    <img src="./img/profile-2.svg">
                     <h4>Profile</h4>
                 </li>
                 <li>
