--- a/system-design/sticky-reponsive-nav/index.html
+++ b/system-design/sticky-reponsive-nav/index.html
@@ -33,32 +33,38 @@
         </nav>
     </header>
 
-    <aside >
-        <nav>
-            <ul>
-                <li>
-                    <img src="./img/dashboard.svg">
-                    <h4>Dashboard</h4>
-                </li>
-                <li>
-                    <img src="./img/email.svg">
-                    <h4>email</h4>
-                </li>
-                <li>
-                    <img src="./img/profile-2.svg">
-                    <h4>Profile</h4>
-                </li>
-                <li>
-                    <img src="./img/file-manager.svg">
-                    <h4>File Manager</h4>
-                </li>
-                <li>
-                    <img src="./img/components.svg">
-                    <h4>components</h4>
-                </li>
-            </ul>
-        </nav>
-    </aside>
+    <div class="container">
+        <aside >
+            <nav>
+                <ul>
+                    <li>
+                        <img src="./img/dashboard.svg">
+                        <h4>Dashboard</h4>
+                    </li>
+                    <li>
+                        <img src="./img/email.svg">
+                        <h4>email</h4>
+                    </li>
+                    <li>
+                        <img src="./img/profile-2.svg">
+                        <h4>Profile</h4>
+                    </li>
+                    <li>
+                        <img src="./img/file-manager.svg">
+                        <h4>File Manager</h4>
+                    </li>
+                    <li>
+                        <img src="./img/components.svg">
+                        <h4>components</h4>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
+
+        <main>
+            <img src="http://placekitten.com/200/800" alt="">
+        </main>
+    </div>
 
     <script src="./app.js"></script>
 </body>
