--- a/system-design/final-project/index.html
+++ b/system-design/final-project/index.html
@@ -37,26 +37,38 @@
         <aside >
             <nav>
                 <ul>
-                    <li>
-                        <img src="./img/dashboard.svg">
-                        <h4>Dashboard</h4>
-                    </li>
-                    <li>
-                        <img src="./img/email.svg">
-                        <h4>email</h4>
-                    </li>
-                    <li>
-                        <img src="./img/profile-2.svg">
-                        <h4>Profile</h4>
-                    </li>
-                    <li>
-                        <img src="./img/file-manager.svg">
-                        <h4>File Manager</h4>
-                    </li>
-                    <li>
-                        <img src="./img/components.svg">
-                        <h4>components</h4>
-                    </li>
+                    <a href="./dashboard/">
+                        <li>
+                            <img src="./img/dashboard.svg">
+                            <h4>Dashboard</h4>
+                        </li>
+                    </a>
+                    <a href="./email/">
+                        <li>
+                            <img src="./img/email.svg">
+                            <h4>email</h4>
+                        </li>
+                    </a>
+
+                    <a href="./profile/">
+                        <li>
+                            <img src="./img/profile-2.svg">
+                            <h4>Profile</h4>
+                        </li>
+                    </a>
+                    <a href="./file-manager">
+                        <li>
+                            <img src="./img/file-manager.svg">
+                            <h4>File Manager</h4>
+                        </li>
+                    </a>
+
+                    <a href="./components/">
+                        <li>
+                            <img src="./img/components.svg">
+                            <h4>components</h4>
+                        </li>
+                    </a>
                 </ul>
             </nav>
         </aside>
