--- a/system-design/final-project/dashboard/index.html
+++ b/system-design/final-project/dashboard/index.html
@@ -34,6 +34,10 @@
     </header>
 
     <div class="container">
+
+
+        <div class="overlay"></div>
+
         <aside >
             <nav>
                 <ul>
@@ -73,11 +77,13 @@
             </nav>
         </aside>
 
+
         <main>
             <div style="float: right;">
-                <img src="./img/Dog.jpeg" width="300">
+                <img src="./img/Dog.jpeg" width="300" height="900" >
             </div>
         </main>
+
     </div>
 
     <script src="./app.js"></script>
