new design system

--- a/index.html
+++ b/index.html
@@ -118,11 +118,12 @@
                 <li><a href="./animation/projects/burger-animation/">PROJECT-1: Burger Animation</a></li>
             </ul>
         </section>
-        <h1 class="title">UI Components</h1>
+        <h1 class="title">Design System</h1>
         <section>
             <ul>
                 <li><a href="./ui-components/sticky-nav/">Sticky Navigation Bar</a></li>
-                <li><a href="./system-design/final-project/dashboard/">Responsive Sticky Nav</a></li>
+                <li><a href="./design-system/template.html">Template</a></li>
+                <li><a href="./design-system/dashboard/">Dashboard</a></li>
                 <!-- <li>Tooltips and Popup message</li>
                 <li>Modal</li>
                 <li>Mega menu </li>
