final file structure

--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
                 <li><a href="./ui-components/sticky-nav/">Sticky Navigation Bar</a></li>
                 <li><a href="./design-system/template.html">Template</a></li>
                 <li><a href="./design-system/dashboard/">Dashboard</a></li>
+                <li><a href="./design-system/email/">Email</a></li>
+                <li><a href="./design-system/profile/">Profile</a></li>
+                <li><a href="./design-system/file-manager/">File Manager</a></li>
+                <li><a href="./design-system/components/">Components</a></li>
                 <!-- <li>Tooltips and Popup message</li>
                 <li>Modal</li>
                 <li>Mega menu </li>
