connect with app.js

--- a/design-system/dashboard/index.html
+++ b/design-system/dashboard/index.html
@@ -68,7 +68,7 @@
                         </li>
                     </a>
 
-                    <a href="../conponenets/">
+                    <a href="../components/">
                         <li>
                             <img src="../img/components.svg">
                             <h4>components</h4>
@@ -85,6 +85,6 @@
 
     </div>
 
-    <script src="./app.js"></script>
+    <script src="../app.js"></script>
 </body>
 </html>
