--- a/design-system/file-manager/index.html
+++ b/design-system/file-manager/index.html
@@ -68,10 +68,10 @@
                         </li>
                     </a>
 
-                    <a href="../conponenets/">
+                    <a href="../components/">
                         <li>
                             <img src="../img/components.svg">
-                            <h4>components</h4>
+                            <h4>Components</h4>
                         </li>
                     </a>
                 </ul>
@@ -85,6 +85,6 @@
 
     </div>
 
-    <script src="./app.js"></script>
+    <script src="../app.js"></script>
 </body>
 </html>
