--- a/design-system/email/index.html
+++ b/design-system/email/index.html
@@ -80,7 +80,52 @@
 
 
         <main>
-            <h1 id="title">EMAIL</h1>
+            <div class="email-container">
+                <section id='sidebar'>
+                    <div id="compose-container">
+                        <div id="compose-button">+ &nbsp;&nbsp;compose</div>
+                    </div>
+                    <nav id="email-nav">
+                        <ul>
+                            <li>
+                                <img src="./img/inbox.svg" alt="">
+                                <h4>Inbox</h4>
+                            </li>
+                            <li>
+                                <img src="./img/draft.svg" alt="">
+                                <h4>Draft</h4>
+                            </li>
+                            <li>
+                                <img src="./img/sent.svg" alt="">
+                                <h4>Sent</h4>
+                            </li>
+                            <li>
+                                <img src="./img/spam.svg" alt="">
+                                <h4>Spam</h4>
+                            </li>
+                            <li>
+                                <img src="./img/trash.svg" alt="">
+                                <h4>Trash</h4>
+                            </li>
+
+                        </ul>
+                    </nav>
+                </section>
+
+                <section id="main">
+                    <div class="toolbar">
+                        <div><input type="checkbox"></div>
+                        <div><img src="./img/flag.svg" alt=""></div>
+                        <div><img src="./img/forward.svg" alt=""></div>
+                        <div><img src="./img/delete.svg" alt=""></div>
+                        <div id="search-bar"><input type="text" placeholder="search"></div>
+                    </div>
+
+                    <div class="inbox">
+                        <div class="email"></div>
+                    </div>
+                </section>
+            </div>
         </main>
 
     </div>
