--- a/design-system/email/index.html
+++ b/design-system/email/index.html
@@ -121,8 +121,19 @@
                         <div id="search-bar"><input type="text" placeholder="search"></div>
                     </div>
 
-                    <div class="inbox">
-                        <div class="email"></div>
+                    <div id="inbox">
+                        <div class="email">
+                            <div>
+                                <input type="checkbox" >
+                                <div class="title"><h4>Project Deadline</h4></div>
+                            </div>
+                            <div>
+                                <p class="heading">A maiores possimus, magni aut soluta </p>
+                            </div>
+                            <div>
+                                <p class="date">Dec 25</p>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
