--- a/design-system/email/index.html
+++ b/design-system/email/index.html
@@ -87,7 +87,7 @@
                     </div>
                     <nav id="email-nav">
                         <ul>
-                            <li>
+                            <li class="active">
                                 <img src="./img/inbox.svg" alt="">
                                 <h4>Inbox</h4>
                             </li>
