--- a/design-system/email/index.html
+++ b/design-system/email/index.html
@@ -114,10 +114,8 @@
 
                 <section id="main">
                     <div class="toolbar">
-                        <div>
-                            <input type="checkbox" class="custom-checkbox" id="checkbox-all">
-                            <label for="checkbox-all"></label>
-                        </div>
+
+                        <div><img src="./img/spam.svg" alt=""></div>
                         <div><img src="./img/flag.svg" alt=""></div>
                         <div><img src="./img/forward.svg" alt=""></div>
                         <div><img src="./img/delete.svg" alt=""></div>
