--- a/design-system/dashboard/index.html
+++ b/design-system/dashboard/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./index.css" type="text/css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <title>Dashboard</title>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" crossorigin="anonymous"></script><title>Dashboard</title>
 </head>
 <body>
     <header id="sticky-nav">
@@ -132,10 +132,16 @@
 
 
             </section>
+
+            <section id="two">
+                <h4>Annual Progress</h4>
+                <canvas id='annual-progress'></canvas>
+            </section>
         </main>
 
     </div>
 
     <script src="../app.js"></script>
+    <script src="./dashboard.js"></script>
 </body>
 </html>
