--- a/design-system/profile/index.html
+++ b/design-system/profile/index.html
@@ -80,7 +80,66 @@
 
 
         <main>
-            <h1 id="title">Profile</h1>
+            <div id="profile-container">
+
+                <div id="profile">
+                    <figure>
+                        <img src="./img/profile-image.jpg" alt="">
+                    </figure>
+                    <h3 class="name">Hozier Miller</h3>
+                    <h5 class="job">Graphic Designer</h5>
+                    <h5 class="address">San Diego, California, US</h5>
+                    <div class="cta">
+                        <div class="follow">Follow</div>
+                        <div class="msg">Message</div>
+                    </div>
+                    <ul class="social-media">
+                        <li> 
+                            <div class="platform">
+                                <img src="../img/hamburger-menu.svg">
+                                <div>Website</div>
+                            </div>
+                            <div class="handler">millerdesigns.io</div>
+                        </li>
+                        <li> 
+                            <div class="platform">
+                                <img src="../img/hamburger-menu.svg">
+                                <div>Instagram</div>
+                            </div>
+                            <div class="handler">@mil_designs</div>
+                        </li>
+                        <li> 
+                            <div class="platform">
+                                <img src="../img/hamburger-menu.svg">
+                                <div>Behance</div>
+                            </div>
+                            <div class="handler">mil-designs</div>
+                        </li>
+                        <li> 
+                            <div class="platform">
+                                <img src="../img/hamburger-menu.svg">
+                                <div>twitter</div>
+                            </div>
+                            <div class="handler">@miller_designs</div>
+                        </li>
+                        <li> 
+                            <div class="platform">
+                                <img src="../img/hamburger-menu.svg">
+                                <div>Dribbble</div>
+                            </div>
+                            <div class="handler">mil_designs</div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div id="details">
+                    details
+                </div>
+
+                <div id="skills">
+                    skills
+                </div>
+            </div>
         </main>
 
     </div>
