--- a/design-system/profile/index.html
+++ b/design-system/profile/index.html
@@ -96,38 +96,38 @@
                     <ul class="social-media">
                         <li> 
                             <div class="platform">
-                                <img src="../img/hamburger-menu.svg">
-                                <div>Website</div>
+                                <img src="./img/web.svg">
+                                <h4>Website</h4>
                             </div>
-                            <div class="handler">millerdesigns.io</div>
+                            <h5 class="handler">millerdesigns.io</h5>
                         </li>
                         <li> 
                             <div class="platform">
-                                <img src="../img/hamburger-menu.svg">
-                                <div>Instagram</div>
+                                <img src="./img/IG.svg">
+                                <h4>Instagram</h4>
                             </div>
-                            <div class="handler">@mil_designs</div>
+                            <h5 class="handler">@mil_designs</h5>
                         </li>
                         <li> 
                             <div class="platform">
-                                <img src="../img/hamburger-menu.svg">
-                                <div>Behance</div>
+                                <img src="./img/behance.svg">
+                                <h4>Behance</h4>
                             </div>
-                            <div class="handler">mil-designs</div>
+                            <h5 class="handler">mil-designs</h5>
                         </li>
                         <li> 
                             <div class="platform">
-                                <img src="../img/hamburger-menu.svg">
-                                <div>twitter</div>
+                                <img src="./img/twitter.svg">
+                                <h4>twitter</h4>
                             </div>
-                            <div class="handler">@miller_designs</div>
+                            <h5 class="handler">@miller_designs</h5>
                         </li>
                         <li> 
                             <div class="platform">
-                                <img src="../img/hamburger-menu.svg">
-                                <div>Dribbble</div>
+                                <img src="./img/dribbble.svg">
+                                <h4>Dribbble</h4>
                             </div>
-                            <div class="handler">mil_designs</div>
+                            <h5 class="handler">mil_designs</h5>
                         </li>
                     </ul>
                 </div>
