--- a/design-system/profile/index.html
+++ b/design-system/profile/index.html
@@ -99,7 +99,7 @@
                                 <img src="./img/web.svg">
                                 <h4>Website</h4>
                             </div>
-                            <h5 class="handler">millerdesigns.io</h5>
+                            <h5 class="handler">mildesigns.com</h5>
                         </li>
                         <li> 
                             <div class="platform">
@@ -133,11 +133,47 @@
                 </div>
 
                 <div id="details">
-                    details
+                    <label>Full Name</label>
+                    <input type="text" value="Hozier Miller">
+
+                    
+                    <label>Email</label>
+                    <input type="text" value="hozier@mildesigns.com">
+
+                    <label>Phone</label>
+                    <input type="text" value="(987) 923-0082">
+
+                    <label>Mobile</label>
+                    <input type="text" value="(536) 565-9587">
+
+                    <label>Address</label>
+                    <input type="text" value="San Diego, California, US">
+
+                    <div></div>
+                    <div class="save">Save Changes</div>
+
+
                 </div>
 
                 <div id="skills">
-                    skills
+                    <h4>Skills</h4>
+
+                    <h5>Illustrator</h5>
+                    <div class="progress" style="--prog:60%; --color:#DC281E;"></div>
+
+
+                    <h5>Photoshop</h5>
+                    <div class="progress" style="--prog:70%; --color:#155799;"></div>
+
+
+                    <h5>InDesign</h5>
+                    <div class="progress" style="--prog:90%; --color: #B24592;"></div>
+
+
+                    <h5>3D Design</h5>
+                    <div class="progress" style="--prog:40%; --color:#512DA8;"></div>
+
+
                 </div>
             </div>
         </main>
