img folder added

--- a/design-system/file-manager/index.html
+++ b/design-system/file-manager/index.html
@@ -80,7 +80,32 @@
 
 
         <main>
-            <h1 id="title">File Manager</h1>
+            <div id="file-container">
+                <div class="dir">
+                    <div class="add">+ &nbsp;Add File</div>
+
+                    <h4>My Drive</h4>
+
+                    <ul id="sub-dir">
+                        <li>
+                            <img src=".">
+                            <h5>All Files</h5>
+                        </li>
+                    </ul>
+    
+                </div>
+
+
+
+
+                <div id="stat">
+
+                </div>
+
+                <div id="main">
+
+                </div>
+            </div>
         </main>
 
     </div>
