--- a/design-system/file-manager/index.html
+++ b/design-system/file-manager/index.html
@@ -81,16 +81,68 @@
 
         <main>
             <div id="file-container">
-                <div class="dir">
+                <div id="dir">
                     <div class="add">+ &nbsp;Add File</div>
 
                     <h4>My Drive</h4>
 
-                    <ul id="sub-dir">
+                    <ul class="sub-dir">
                         <li>
-                            <img src=".">
+                            <img src="./img/file.svg">
                             <h5>All Files</h5>
                         </li>
+
+                        
+                        <li>
+                            <img src="./img/devices.svg">
+                            <h5>My Devices</h5>
+                        </li>
+
+                        <li>
+                            <img src="./img/recent.svg">
+                            <h5>Recent</h5>
+                        </li>
+
+                        <li>
+                            <img src="./img/imp.svg">
+                            <h5>Important</h5>
+                        </li>
+
+                        <li>
+                            <img src="./img/deleted.svg">
+                            <h5>Deleted Files</h5>
+                        </li>
+
+                        <li>
+                            <img src="./img/doc.svg">
+                            <h5>Documents</h5>
+                        </li>
+
+
+                        <li>
+                            <img src="./img/img.svg">
+                            <h5>Images</h5>
+                        </li>
+
+
+                        <li>
+                            <img src="./img/video.svg">
+                            <h5>Videos</h5>
+                        </li>
+
+
+                        <li>
+                            <img src="./img/audio.svg">
+                            <h5>Audio</h5>
+                        </li>
+
+
+                        <li>
+                            <img src="./img/zipped.svg">
+                            <h5>Zip Files</h5>
+                        </li>
+
+
                     </ul>
     
                 </div>
