--- a/design-system/file-manager/index.html
+++ b/design-system/file-manager/index.html
@@ -87,7 +87,7 @@
                     <h4>My Drive</h4>
 
                     <ul class="sub-dir">
-                        <li>
+                        <li class="active"> 
                             <img src="./img/file.svg">
                             <h5>All Files</h5>
                         </li>
