annual progress done

--- a/design-system/dashboard/index.html
+++ b/design-system/dashboard/index.html
@@ -135,7 +135,9 @@
 
             <section id="two">
                 <h4>Annual Progress</h4>
-                <canvas id='annual-progress'></canvas>
+                <div class="canvas-parent">
+                    <canvas id='annual-progress'></canvas>
+                </div>
             </section>
         </main>
 
