--- a/design-system/dashboard/index.html
+++ b/design-system/dashboard/index.html
@@ -139,6 +139,21 @@
                     <canvas id='annual-progress'></canvas>
                 </div>
             </section>
+
+            <section id="three">
+                <div class="visitors">
+                    <div class="parent">
+                        <canvas id='visitors-status'></canvas>
+
+                    </div>
+                </div>
+
+                <div class="daily-target">
+                    <div class="parent">
+                        <canvas id='daily-target'></canvas>
+                    </div>
+                </div>
+            </section>
         </main>
 
     </div>
