--- a/design-system/dashboard/index.html
+++ b/design-system/dashboard/index.html
@@ -141,16 +141,16 @@
             </section>
 
             <section id="three">
-                <div class="visitors">
+                <div class="monthly-sales">
                     <div class="parent">
-                            <canvas id='daily-target'></canvas>
+                        <canvas id="monthly-sales"></canvas>
 
                     </div>
                 </div>
 
-                <div class="daily-target">
+                <div class="visitors-status">
                     <div class="parent">
-                            <canvas id='visitors-status'></canvas>
+                        <canvas id='visitors-status'></canvas>
 
                     </div>
                 </div>
