--- a/design-system/file-manager/index.html
+++ b/design-system/file-manager/index.html
@@ -151,7 +151,13 @@
 
 
                 <div id="stat">
+                    <div class="capacity">
+                        <h4>5GB <span>available of 50 GB</span></h4>
+                    </div>
 
+                    <div class="chart">
+                        <div style="--color:"></div>
+                    </div>
                 </div>
 
                 <div id="main">
