--- a/design-system/file-manager/index.html
+++ b/design-system/file-manager/index.html
@@ -266,12 +266,25 @@
                         
 
                     </div>
+
+                    <div class="files">
+                        <div class="header">    
+                            <h4>File Name</h4>
+                            <h4 >Members</h4>   
+                            <h4>Dec 12, 1995</h4>
+                        </div>
+                        <ul>
+
+
+
+                        </ul>
+                    </div>
                 </div>
             </div>
         </main>
 
     </div>
-
+    <script src="./fileManager.js"></script>
     <script src="../app.js"></script>
 </body>
 </html>
