final file-manager

--- a/design-system/file-manager/index.html
+++ b/design-system/file-manager/index.html
@@ -271,7 +271,7 @@
                         <div class="header">    
                             <h5>File Name</h5>
                             <h5 >Members</h5>   
-                            <h5>Dec 12, 1995</h5>
+                            <h5>Date</h5>
                         </div>
                         <ul>
 
