new folders updated

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
         <h1 class="title">Advanced CSS</h1>
         <section>
             <ul>
-                <li>CSS Rules and Variables</li>
-                <li>CSS Functions</li>
+                <li><a href="./advanced-CSS/variables/">CSS Rules and Variables</a></li>
+                <li><a href="./advanced-CSS/functions/">CSS Functions</a></li>
                 <li><a href="./advanced-CSS/transform/">Transform</a></li>
-                <li>Filters</li>
-                <li>Blend Modes</li>
+                <li><a href="./advanced-CSS/filters/">Filters</a></li>
+                <!-- <li>Blend Modes</li> -->
                 <li><a href="./Advanced-CSS/panda/index.html">PROJECT-1: Panda Illustration</a></li>
             </ul>
         </section>
