--- a/index.html
+++ b/index.html
@@ -95,12 +95,13 @@
         <h1 class="title">Advanced CSS</h1>
         <section>
             <ul>
-                <li><a href="./advanced-CSS/variables/">CSS Rules and Variables</a></li>
-                <li><a href="./advanced-CSS/functions/">CSS Functions</a></li>
                 <li><a href="./advanced-CSS/transform/">Transform</a></li>
+                <li><a href="./advanced-CSS/variables/">CSS Variables</a></li>
+                <li><a href="./advanced-CSS/rules/">CSS Rules</a></li>
+                <li><a href="./advanced-CSS/functions/">CSS Functions</a></li>
                 <li><a href="./advanced-CSS/filters/">Filters</a></li>
                 <!-- <li>Blend Modes</li> -->
-                <li><a href="./Advanced-CSS/panda/index.html">PROJECT-1: Panda Illustration</a></li>
+                <li><a href="./Advanced-CSS/panda/index.html">Sass: Panda Illustration</a></li>
             </ul>
         </section>
         
