--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
                 <li>Drag and Drop</li> -->
             </ul>
         </section>
-        <h1 class="title">HTML Graphics</h1>
+        <!-- <h1 class="title">HTML Graphics</h1>
         <section>
             <ul>
                 <li>SVG</li>
                 <li>Canvas</li>
             </ul>
-        </section>
+        </section> -->
 
 
 
