--- a/animation/keyframes/index.html
+++ b/animation/keyframes/index.html
@@ -31,7 +31,7 @@
             <br>
             &nbsp;&nbsp;&nbsp; <code>keyframes-selector {css-styles;}</code> <br>
             &nbsp;&nbsp;&nbsp; <code>keyframes-selector {css-styles;}</code> <br>
-            &nbsp;&nbsp;&nbsp; <code>keyframes-selector {css-styles;}</code>
+            &nbsp;&nbsp;&nbsp; <code>...</code>
             <br>
             <code>}</code>
         </section>
