--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <li><a href="./advanced-CSS/variables/">CSS Variables</a></li>
                 <li><a href="./advanced-CSS/rules/">CSS Rules</a></li>
                 <li><a href="./advanced-CSS/functions/">CSS Functions</a></li>
-                <li><a href="./advanced-CSS/filters/">Filters</a></li>
+                <!-- <li><a href="./advanced-CSS/filters/">Filters</a></li> -->
                 <!-- <li>Blend Modes</li> -->
                 <li><a href="./Advanced-CSS/panda/index.html">Sass: Panda Illustration</a></li>
             </ul>
