--- a/HTML-basics/media-tables/index.html
+++ b/HTML-basics/media-tables/index.html
@@ -157,6 +157,14 @@
                 <li><code>&lt;col span="n" style="property:value;"&gt;</code></li>
             </ul>
         </section>
+        <h1 class="title">iFrames</h1>
+        <section>
+            <p>
+            <code>&lt;iframe&gt;</code> tag allows to embed an entire HTML document into any section of the current document.
+            </p>
+            <iframe src="../../index.html" height="200" width="100%" title="iframe tag example"></iframe>
+
+        </section>
     </div>
 
 </body>
